--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "4.6.0",
+    "node-sass": "5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "tsparticles": "^1.29.2",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
